--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class="jumbotron text-center">
+    <div class="row h-100 justify-content-center align-items-center bg-dark">
+    <div class="jumbotron text-center bg-warning">
       <blockquote class="blockquote">
-      <p><pre>I cast a dark spell upon <mark>thee</mark>. <kbd>ctrl + z</kbd> will not help you now. </pre></p>
+      <p><pre></pre>I cast a dark spell upon <mark>thee</mark>. <kbd>ctrl + z</kbd> will not help you now. </pre></p>
       <footer class="blockquote-footer">Mysterious wizard</footer>
       </blockquote>
+      </div>
     </div>
   </body>
 </html>
